umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@openbabel_0276_Sc1snnc1c2ccccc2.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: opensmiles_strict
category: opensmiles_strict
opensmiles_strict:
  success: true
  summary:
    sum_formula: C8N2S2
    atom_count: 12
    bond_count: 13
